// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FrontMatter should parse front matter 1`] = `
"<h1>Hello World</h1>
"
`;

exports[`FrontMatter should tokenize front matter 1`] = `
Array [
  Object {
    "type": "front-matter",
    "value": Object {
      "title": "Hello World",
    },
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Hello World",
    "setext": false,
    "tokens": Array [
      Object {
        "raw": "Hello World",
        "type": "text",
        "value": "Hello World",
      },
    ],
    "type": "heading",
    "value": "Hello World",
  },
  Object {
    "type": "new-line",
  },
]
`;

exports[`FrontMatter should tokenize front matter with array, number and object 1`] = `
Array [
  Object {
    "type": "front-matter",
    "value": Object {
      "array": Array [
        1,
        2,
        3,
      ],
      "object": Object {
        "a": 1,
        "b": 2,
      },
      "stringArray": Array [
        "a",
        "b",
        "c",
      ],
      "title": "Hello World",
    },
  },
  Object {
    "indent": 0,
    "level": 1,
    "raw": "# Hello World",
    "setext": false,
    "tokens": Array [
      Object {
        "raw": "Hello World",
        "type": "text",
        "value": "Hello World",
      },
    ],
    "type": "heading",
    "value": "Hello World",
  },
  Object {
    "type": "new-line",
  },
]
`;

exports[`FrontMatter should tokenize more real fixture 1`] = `
Object {
  "date": "2023-10-12 12:00:00",
  "tags": Array [
    "django",
    "vue",
    "docker",
    "docker-compose",
    "gunicorn",
    "vite",
  ],
  "title": "Steps to dockerize your django vue application",
}
`;
